<resources>
    <string name="app_name">Example</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="config">Config</string>
    <string name="log_in">Log In</string>
    <string name="start_time">Start Time</string>
    <string name="start_time_002A">Start Time *</string>
    <string name="end_time">End Time</string>
    <string name="end_time_002A">End Time *</string>
    <string name="save_report_time_interval_successfully">Save Report Time Interval Successfully</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="keep_me_signed_in">Keep Me Signed In</string>
    <string name="my_timesheet">My TimeSheet</string>
    <string name="my_availability">My Availability</string>
    <string name="my_schedule">My Schedule</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="clock_in_out">Clock In/Out</string>
    <string name="sos">SOS</string>
    <string name="profile">Profile</string>
    <string name="all_day">All Day</string>
    <string name="repeat">Repeat</string>
    <string name="comment">Comment</string>
    <string name="time">Time</string>
    <string name="to">to</string>
    <string name="To">To</string>
    <string name="From">From</string>
    <string name="cancel_sos">Cancel SOS</string>
    <string name="my_request">My Request</string>
    <string name="my_requests">My Requests</string>
    <string name="new_leave">New Leave</string>
    <string name="edit_leave">Edit Leave</string>
    <string name="start_date">Start Date</string>
    <string name="start_date_002A">Start Date *</string>
    <string name="end_date">End Date</string>
    <string name="end_date_002A">End Date *</string>
    <string name="reason">Reason</string>
    <string name="approver">Approver</string>
    <string name="leave_type">Leave Type</string>
    <string name="leave_type_002A">Leave Type *</string>
    <string name="closed">Closed</string>
    <string name="approve">Approve</string>
    <string name="approver_002A">Approver *</string>
    <string name="mail_cc">Mail CC</string>
    <string name="decline">Decline</string>
    <string name="preference_file_name">sharedpreferences</string>
    <string name="with_medical_certificate">With Medical Certificate</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="error">Error</string>
    <string name="history">History</string>
    <string name="edit">Edit</string>
    <string name="remain_balance">Remain balance</string>
    <string name="My_submission">My submission</string>
    <string name="my_timesheets">My TimeSheets</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="Timesheet_information">Timesheet information</string>
    <string name="length">Length</string>
    <string name="location">Location</string>
    <string name="shift">Shift</string>
    <string name="are_you_sure_to_delete_this_graft">Are you sure to delete this graft?</string>
    <string name="are_you_sure_to_delete_this_timesheet">Are you sure to delete this TimeSheet?</string>
    <string name="new_timesheets">New Timesheets</string>
    <string name="duration">Duration</string>
    <string name="team_timesheets">Team Timsheets</string>
    <string name="approved">Approved</string>
    <string name="are_you_sure_approve_this_timesheet">Are you sure approve this timesheet ?</string>
    <string name="are_you_sure_delete_this_timesheet">Are you sure delete this timesheet ?</string>
    <string name="are_you_sure_cancel_this_timesheet">Are you sure cancel this timesheet ?</string>
    <string name="notice">Notice</string>
    <string name="edit_timesheet">Edit Timesheet</string>
    <string name="timeclock">Timeclock</string>
    <string name="filter_by_date">filter by date</string>
    <string name="Filter_by_date">Filter by date</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="filter">filter</string>
    <string name="Filter">Filter</string>
    <string name="clear">clear</string>
    <string name="From_date">From date</string>
    <string name="To_date">To date</string>
    <string name="Apply_Filters">Apply Filters</string>
    <string name="Last_clocking_in_message">Last clocking in:%1$s</string>
    <string name="Last_clocking_out_message">Last clocking out:%1$s</string>
    <string name="from">from</string>
    <string name="save_success">Save success</string>
    <string name="hour">hour</string>
    <string name="incorrect_username_or_password">Incorrect Username or Password</string>
    <string name="loading">Loading</string>
    <string name="acknowledged">Acknowledged</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="leave">Leave</string>
    <string name="timesheet">Timesheet</string>
    <string name="schedule">Schedule</string>
    <string name="more">More</string>
    <string name="my_balance">My Balance</string>
    <string name="annual_days_used">Annual Days <b>Used</b></string>
    <string name="annual_days_available">Annual Days <b>Available</b></string>
    <string name="note">Note</string>
    <string name="days">Days</string>
    <string name="member_requests">Member Requests</string>
    <string name="member_request">Member Request</string>
    <string name="approver_note">Approver Note</string>
    <string name="days_remaining">Days Remaining</string>
    <string name="other">Other</string>
    <string name="employee">Employee</string>
    <string-array name="team_timesheet_status_filter">
        <item>All</item>
        <item>Declined</item>
        <item>Approved</item>
    </string-array>
    <string name="sercurity_code">Sercurity Code</string>
    <string name="network_config_sercurity_code">123456</string>
    <string name="approving_request">approving request</string>
    <string name="declining_request">declining request</string>
    <string name="current_location">current location</string>
    <string name="Resolve">Resolve</string>
    <string name="your_duress_has_been_resolved">Your duress has been resolved</string>
    <string name="your_duress_has_been_acknowledged">Your duress has been acknowledged</string>
    <string name="alarm">Alarm</string>
    <string name="duress">Duress</string>
    <string name="in_duress">In Duress</string>
    <string name="login_fail">Login Fail</string>
    <string name="confirm">Confirm</string>
    <string name="Attachments">Attachments</string>
    <string name="attach_file">attach file</string>
    <string name="Attach_file">Attach file</string>
    <string name="Attach_image_file">Attach image file</string>
    <string name="Attach_non_image_file">Attach none image file</string>
    <string name="Image">Image</string>
    <string name="regulations_on_paid_leave">regulations on paid leave</string>
    <string name="annual_leave_hint">Most full-time workers are entitled to four weeks paid annual leave for every 12 months worked. It is up to each employer and employee to agree on when and for how long paid annual leave may be taken. Employees who regularly work shifts on Sunday and public holidays in businesses that operate 24 hours a day for seven days per week are entitled to an extra week of paid annual leave.</string>
    <string name="annual_leave">Annual Leave</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="sick_leave_hint">If you are ill while you are on annual leave, you should get a medical certificate from your family doctor (GP)</string>
    <string name="employee_name">Employee name</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_details">CONTACT DETAILS</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="home_phone">Home Phone</string>
    <string name="user_role">User Role</string>
    <string name="report_to">Report To</string>
    <string name="working_mobile">Working Mobile</string>
    <string name="working_region">Working Region</string>
    <string name="device_id">Device ID</string>
    <string name="employment_start_date">Employment Start Date</string>
    <string name="skills">Skills</string>
    <string name="availability">Availability</string>
    <string name="attachments">Attachments</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="add_emergency_contact">add emergency contact</string>
    <string name="Contact_Name">Contact Name</string>
    <string name="Phone_number">Phone number</string>
    <string name="server_domain">Server Domain</string>
    <string name="contractor">Contractor</string>
    <string name="is_contractor">Is contractor</string>
    <string name="vietnamese">vietnamese</string>
    <string name="english">English</string>
    <string name="declined">Declined</string>
    <string name="sick">sick</string>
    <string name="annual">annual</string>
    <string name="Sick">Sick</string>
    <string name="Annual">Annual</string>
    <string name="status">Status</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="left_menu">Left Menu</string>
    <string name="right_menu">Right Menu</string>
    <string name="window_popup_menu">Window Popup Menu</string>
    <string name="event_order_android">Event Order Android</string>
    <string name="date">Date</string>
    <string name="payment_type">payment type</string>
    <string name="spinner_example">Spinner Example</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="compound_view">Compound View</string>
    <string name="custom_view">Custom View</string>
    <string name="canvas_and_paint_example">Canvas and Paint example</string>
    <string name="canvas_and_paint_example_2">Canvas and Paint example 2</string>
    <string name="canvas_and_paint_example_3">Canvas and Paint example 3</string>
    <string name="canvas_and_paint_example_4">Canvas and Paint example 4</string>
    <string name="canvas_and_paint_example_5">Canvas and Paint example 5</string>
    <string name="list_view_example">List View Example</string>
    <string name="rotate_view_example">Rotate View Example</string>
    <string name="scrolling_activity2">Scrolling Activity 2</string>
    <string name="dynamic_add_view">Dynamic add view</string>
    <string name="take_photo_with_content_provider">Take photo with content provider</string>
    <string name="volume_button_example">Volume button example</string>
    <string name="collapsingToolbarLayout">CollapsingToolbarLayout</string>
    <string name="collapsingToolbar2Layout">CollapsingToolbar 2 Layout</string>
    <string name="collapsingToolbar3Layout">CollapsingToolbar 3 Layout</string>
    <string name="autocomplete">autocomplete</string>
    <string name="drawable_resource_example">Drawable resource example</string>
</resources>