<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/transparent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@drawable/shadow_filter_popupwindow_top"
            android:layout_alignParentBottom="true"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:background="@drawable/ic_retangle_e1e1e1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#e1e1e1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hintIcon"
                android:layout_margin="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/hintText"
                android:text="@string/employee"
                android:textSize="14sp"
                android:textColor="#bbbbbb"
                android:gravity="center_vertical"
                android:layout_marginLeft="40dp"
                />
        </RelativeLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/searchEmployeeEdditText"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:typeface="sans"
            />
    </RelativeLayout>
    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_height="45dp"
        android:layout_width="match_parent"
        app:tabIndicatorColor="#65c8d0"
        app:tabIndicatorHeight="3dp"
        app:tabTextColor="#5f6972"
        app:tabSelectedTextColor="#5f6972"
        android:background="@color/white"
        >

        <android.support.design.widget.TabItem
            android:text="@string/date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/white"
            />

        <android.support.design.widget.TabItem
            android:text="@string/location"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/white"

            />

        <android.support.design.widget.TabItem
            android:text="@string/status"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:background="@color/white"
            />

        <android.support.design.widget.TabItem
            android:text="@string/payment_type"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/white"
            />
    </android.support.design.widget.TabLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filterContent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:id="@+id/editArea"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center">
        <Button
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:id="@+id/cancelAddNewEmployeeOT"
            android:paddingLeft="30dp"
            android:paddingRight="25dp"
            android:gravity="center"
            android:background="#8d96a1"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/filter"
            android:id="@+id/addNewEmployeeOT"
            android:background="#65c8d0"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
