<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:alpha="0.9"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@android:color/transparent"
        android:alpha="1"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_retangle_white"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:alpha="1"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/white"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Filter"
        android:textSize="16sp"
        android:textColor="#8a8989"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/employeeNameTextView"
        android:text="In this example, i have used a View to cover everything bellow popup window, this view have dark color"
        android:layout_alignParentTop="true"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/clearTextViewDialog"
            android:textColor="#3fafd7"
            android:background="@color/white"
            android:textAllCaps="true"
            android:baselineAligned="false"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filterTextViewDialog"
            android:text="@string/filter"
            android:textAllCaps="true"
            android:background="@color/white"
            android:textColor="#3fafd7"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"/>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>
